<resources>
    <string name="app_name">My Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="userProfile">UserProfile</string>
    <string name="settings">settings</string>
    <string name="favourites">favourites</string>
    <string name="applicantName">Saurabh Shah (013)</string>
    <string name="leaveHeading">Leave Heading</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="morningMsg">Good Morning</string>
    <string name="afternoonMessage">Good Afternoon</string>
    <string name="eveningMessage">Good Evening</string>
    <string name="total">TOTAL</string>
    <string name="present">PRESENT</string>
    <string name="absent">ABSENT</string>
    <string name="holidays">HOLIDAYS</string>
    <string name="totalDays">22</string>
    <string name="totalPresentDays">17</string>
    <string name="absentDays">3</string>
    <string name="_2">2</string>
    <string name="p">P</string>
    <string name="presentDate">5-05-2020</string>
    <string name="presentDuration">9:00 AM - 6:00 PM</string>
    <string name="employeeName">Nisarg</string>
    <string name="dateTextView">23-04-2020</string>
    <string name="greetTextView">Good Morning</string>
    <string name="leaves">Leaves</string>
    <string name="pl">PL</string>
    <string name="cl">CL</string>
    <string name="sl">SL</string>
    <string name="plTextView">0/0</string>
    <string name="clTextView">0/0</string>
    <string name="slTextView">0/0</string>
    <string name="alerts">Alerts</string>
    <string name="alertTextView">3</string>
    <string name="tasks">Tasks</string>
    <string name="tasksTextView">2</string>
    <string name="attendance">Attendance</string>
    <string name="presentTextView">Present</string>
    <string name="absentTextView">Absent</string>
    <string name="presentCount">00/00</string>
    <string name="absentCount">00/00</string>
    <string name="holiday">Holiday</string>
    <string name="holidayTextView">Lock Down</string>
    <string name="date">6</string>
    <string name="day">Tuesday</string>
    <string name="a">A</string>
    <string name="absentString">11-05-2020</string>
    <string name="applied_by">Applied By</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="fromDate">25 Feb 2020</string>
    <string name="toDate">28 Feb 2020</string>
    <string name="no_of_days">No of Days</string>
    <string name="total_days">4</string>
    <string name="reason">Reason</string>
    <string name="reason_text">Need to visit native place urgently</string>
    <string name="textLimit_reason">34/50</string>
    <string name="remark_for_rejection">Remark for Rejection</string>
    <string name="rejectionRemark">-</string>
    <string name="text_limit_remark">34/50</string>
    <string name="approveButton">APPROVE</string>
    <string name="rejectButton">REJECT</string>
    <string name="logo">logo</string>
    <string name="leave_application">Leave Application</string>
    <string name="la">LA</string>
    <string name="profilepic">profilePic</string>
    <string name="userName">Nisarg</string>
    <string name="userMailId">nisarg@mobiuso.com</string>
    <string name="requestDate">Requested on: 25 Feb 2020</string>
    <string name="requested_by">Requested By: Saurabh Shah</string>
    <string name="l">L</string>
    <string name="welcomeimage">welcomeImage</string>
    <string name="_10_may_2020">10-May-2020</string>
</resources>
