<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/border">

        <Button
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_background"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/l"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/leaveHeading"
                android:fontFamily="@font/roboto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/requestDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/requestDate"
                android:fontFamily="@font/roboto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3041A1"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/applicantNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/requested_by"
                android:fontFamily="@font/roboto"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#3041A1"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
